# react_rust

./: .gitignore  README.md
backend/: .env  .gitignore  Cargo.toml
backend/src/: cors.rs  extract_pdf.py  generate_labels.py  get_all_data.rs  get_monthly_value.rs  main.rs  ml.py  requirements.txt  scan_and_insert.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: DatePicker.tsx  MonthlyAnalysis.tsx
