[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
csv = "1.3.0"
bytes = "1.6.0"
tower = "0.4.13"
hyper = { version = "1.3.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
dotenv = "0.15.0"
sqlx = {version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"]}
chrono = { version = "0.4.38", features = ["serde"] }